# LiyaBot

./: README.md  desktop.ini
NoneBot2/: 安装依赖.bat
NoneBot2/LiyaBot/: .env.prod  README.md  install.bat  pyproject.toml  r.txt  requirements.txt  进入虚拟环境.bat
