[project]
name = "liya"
version = "0.1.0"
description = "liya"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = [
    #文i
    "nonebot_plugin_kawaii_robot", 
    #吃什么
    "nonebot_plugin_whateat_pic",
    #发病
    "nonebot_plugin_random_stereotypes",
    #咖波
    "nonebot_plugin_capoo",
    #早晚安
    #疯狂星期四
    "nonebot_plugin_crazy_thursday",
    #表情合成
    "nonebot_plugin_emojimix",
    #龙图
    "nonebot_plugin_longtu",
    #表情包制作
    "nonebot_plugin_memes",
    #bot状态
    "nonebot_plugin_kawaii_status",
    #随个人
    "nonebot-plugin-person",
    #我的超能力
    "nonebot_plugin_mypower",
    #roll
    "nonebot_plugin_sayoroll",
    #漂流瓶
    "nonebot_plugin_bottle",
    #alconna适配器
    "nonebot_plugin_alconna",
    #方舟抽卡
    "nonebot_plugin_arkgacha",
    #签到适配器
    "nonebot_plugin_guild_patch",
    #签到
    "nonebot_plugin_pcr_sign"
]
plugin_dirs = []
builtin_plugins = ["echo"]